managed/apps/eg/components/website/overlays/dev/patches/deploy-website-api.yaml
---
apiVersion: argoproj.io/v1alpha1
kind: Rollout
# apiVersion: apps/v1
# kind: Deployment
metadata:
  name: website-api
  namespace: eg
spec:
  template:
    spec:
      containers:
        - name: api
          image: gcr.io/tf-ops-cicd-97aadd/eg/website/dev/api:f989d89
