managed/apps/eg/components/website/overlays/dev/patches/deploy-website-static.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: website-static
  namespace: eg
spec:
  template:
    spec:
      containers:
        - name: static
          image: gcr.io/tf-ops-cicd-97aadd/eg/website/dev/static:2f3cabe
